# dataset-generator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dataset_generator/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  engine.py  formats.py  hub.py
src/dataset_generator/loaders/: __init__.py  base.py  html.py  pdf.py  retriever.py  text.py
src/dataset_generator/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
src/dataset_generator/quality/: __init__.py  balance.py  dedup.py  diversity.py  evaluate.py  language.py  llm_judge.py  pii.py  pipeline.py  toxicity.py  validate.py
src/dataset_generator/strategies/: __init__.py  adversarial.py  auto_optimize.py  base.py  cot.py  direct.py  evolinstruct.py  few_shot.py  persona.py
src/dataset_generator/tasks/: __init__.py  base.py  classification.py  conversation.py  distillation.py  ner.py  preference.py  qa.py  sft.py  summarization.py
templates/: classification.yaml  conversation.yaml  distillation.yaml  ner.yaml  preference.yaml  qa.yaml  sft.yaml  summarization.yaml
tests/: test_checkpoint.py  test_cli.py  test_config.py  test_engine.py  test_evaluate.py  test_formats.py  test_hub.py  test_loaders.py  test_providers.py  test_quality.py  test_quality_pipeline.py  test_strategies.py  test_tasks.py
