[project]
name = "dataset-generator"
version = "0.2.0"
description = "Generate high-quality synthetic datasets for ML training using any LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "David Juboor" }]
keywords = [
    "synthetic-data",
    "dataset-generation",
    "llm",
    "machine-learning",
    "fine-tuning",
    "sft",
    "dpo",
    "rlhf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
docs = [
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
]
huggingface = [
    "datasets>=2.0",
    "huggingface-hub>=0.20",
]
anthropic = [
    "anthropic>=0.39",
]
all = [
    "dataset-generator[dev,docs,huggingface,anthropic]",
]

[project.scripts]
dg = "dataset_generator.cli:app"

[project.urls]
Homepage = "https://github.com/DJuboor/dataset-generator"
Documentation = "https://github.com/DJuboor/dataset-generator#readme"
Repository = "https://github.com/DJuboor/dataset-generator"
Issues = "https://github.com/DJuboor/dataset-generator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_generator"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dataset_generator --cov-report=term-missing -q"

[tool.coverage.run]
source = ["dataset_generator"]

[tool.coverage.report]
fail_under = 80
